*********
Changelog
*********

Cogent 1.5 - 1.6
================

New Features
------------

Changes
-------

Bug Fixes
---------


Cogent 1.4.1 - 1.5
==================

New Features
------------

* major additions to Cookbook. Thanks to the many contributors (too many to
  list here)!
* added AlleleFreqs attribute to ensembl Variation objects.
* added getGeneByStableId method to genome objects.
* added Introns attribute to Transcript objects and an Intron class. (Thanks
  to Hua Ying for this patch!)
* added Mann-Whitney test and a Monte-Carlo version
* exploratory and confirmatory period estimation techniques (suitable for
  symbolic and continuous data)
* Information theoretic measures (AIC and BIC) added
* drawing of trees with collapsed nodes
* progress display indicator support for terminal and GUI apps
* added parser for illumina HiSeq2000 and GAiix sequence files as 
  cogent.parse.illumina_sequence.MinimalIlluminaSequenceParser.
* added parser to FASTQ files, one of the output options for illumina's
  workflow, also added cookbook demo.
* added functionality for parsing of SFF files without the Roche tools in
  cogent.parse.binary_sff

Changes
-------

* thousand fold performance improvement to nmds
* >10-fold performance improvements to some Table operations

Bug Fixes
---------

* Fixed a Bug in cogent.core.alphabet that resulted in 4 tests err'ing out 
  when using NumPy v1.4.1
* Sourceforge bugs 2987289, 2987277, 2987378, 2987272, 2987269 were addressed 
  and fixed

Cogent 1.4 - 1.4.1
==================

New Features
------------

* Simplified getting genetic variation from Ensembl and provide the protein
  location of nonsynonymous variants.
* rate heterogeneity variants of pre-canned continuous time substitution
  models easier to define.
* Added implementation of generalised neighbour joining.
* New capabilities for examining genetic variants using Ensembl.
* Phylogenetic methods that can return collections of trees do so as a